--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ entrypoints==0.4
 fastapi==0.93.0
 gitdb==4.0.10
 GitPython==3.1.31
+h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
@@ -36,6 +37,7 @@ Pygments==2.14.0
 Pympler==1.0.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-multipart==0.0.6
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
@@ -57,6 +59,7 @@ typing_extensions==4.5.0
 tzdata==2022.7
 tzlocal==4.2
 urllib3==1.26.14
+uvicorn==0.21.0
 validators==0.20.0
 watchdog==2.3.1
 zipp==3.15.0
